--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/data
-/includes
-/wecool2015
+/data/
+/includes/
+/wecool2015/
 /tp/config.php
-/tp/temp
-/tp/ThinkPHP
-/yfk
-/.gitignore
+/tp/temp/
+/tp/ThinkPHP/
+/yfk/
+.gitignore
